--- a/LMM_ANN_GNN_forChem_complete.ipynb
+++ b/LMM_ANN_GNN_forChem_complete.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the 'markdown cell' below  replace the `???` with the names of those in your group."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "???"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Artificial neural networks for QSAR\n",
     "_by David Holmberg (August 2023)_\n",
     "#### Dataset\n",
@@ -591,7 +605,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fit GNN Model here. Hint, this is a bit harder. You have some more help-code prepared. Fix the commented sections."
+    "#Fit GNN Model here. Hint, this is a bit harder - you need to account for batches, and averages. You have some more help-code prepared. Fix the commented sections. Take inspiration from your previous training-loop\n",
+    "\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
+    "pbar = tqdm(range(num_epochs), desc=\"Epochs\")\n",
+    "for epoch in range(num_epochs):\n",
+    "    # Training Phase. Don't forget to save you losses! and to set your model to train!\n",
+    "    # gnn1_model.train()\n",
+    "\n",
+    "    for batch in t_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        # Use Batch Data object in forward pass\n",
+    "        outputs = gnn1_model(batch.x, batch.edge_index, batch.batch)\n",
+    "        #Here you need some code. it should look very similar to you previous loop for ANN2\n",
+    "\n",
+    "\n",
+    "    avg_train_loss = sum(train_loss_items) / len(train_loss_items)\n",
+    "    train_losses.append(avg_train_loss)\n",
+    "    # Validation Phase (assuming you have a separate validation loader)\n",
+    "    gnn1_model.eval()\n",
+    "    val_loss_items = []\n",
+    "    with tch.no_grad():\n",
+    "        for val_batch in v_loader:\n",
+    "            #here you run your validation per batch\n",
+    " \n",
+    "    # I suggest you deal with val_loss as you did with train_loss\n",
+    "    val_losses.append(avg_val_loss)\n",
+    "    # print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {train_losses[-1]:.4f}, Val Loss: {avg_val_loss:.4f}')\n",
+    "    pbar.update(1)\n",
+    "    pbar.set_postfix({\"Training Loss\": avg_train_loss, \"Validation Loss\": avg_val_loss})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We've prepared the eval for you.\n",
+    "If you did everything else correctly, this will run out-of-the-box"
    ]
   },
   {
