--- a/LMM_CNN_complete.ipynb
+++ b/LMM_CNN_complete.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "\n",
     "def load_dataset():\n",
-    "    dirname = 'bbbc021v1_images'\n",
+    "    dirname = '/scratch-shared/students/DeepLearning/bbbc021v1_images'\n",
     "    x_orig = tch.zeros((660, 3, 256, 256), dtype=tch.float32)\n",
     "\n",
     "    for f in range(x_orig.shape[0]):\n",
