--- a/LMM_ANN_GNN_forChem.ipynb
+++ b/LMM_ANN_GNN_forChem.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the 'markdown cell' below  replace the `???` with the names of those in your group."
+    "In the 'markdown cell' below  replace the `???` with your name."
    ]
   },
   {
@@ -32,7 +32,7 @@
     "* to learn the basics of how to define, compile, fit and evaluate neural networks via TensorFlow.\n",
     "\n",
     "#### Note\n",
-    "We will be using the open-source machine learning framework TensorFlow (https://www.tensorflow.org) and Keras (https://keras.io) for our neural networks. TensorFlow was developed by the Google Brain team and is today one of the most widely used machine learning frameworks in research and industry and Keras was/is the most popular higher-level API that runs atop TensorFlow. However, last year TensorFlow 2 was released. In TensorFow 2 (which we will use for all our neural network work) Keras is now fully integrated. This means that we get all the benefits of TensorFlow with a much easier (Keras-type) way to define and train models than was previously possible with TensorFlow 1."
+    "We will be using the open-source machine learning framework Pytorch"
    ]
   },
   {
@@ -114,35 +114,113 @@
     "    plt.show()\n",
     "    plt.close()\n",
     "\n",
-    "\n",
-    "\n",
     "def smiles_to_fingerprint(smiles):\n",
     "    mol = Chem.MolFromSmiles(smiles)\n",
-    "    fp = AllChem.GetMorganFingerprintAsBitVect(mol, 2, nBits=128)\n",
+    "    fp = AllChem.GetMorganFingerprintAsBitVect(mol, 2, nBits=1024)\n",
     "    return list(fp.ToBitString())\n",
     "\n",
     "def smiles_to_mol(smiles):\n",
     "    mol = Chem.MolFromSmiles(smiles)\n",
+    "    if mol is not None:\n",
+    "        mol = Chem.AddHs(mol)\n",
     "    return mol\n",
     "\n",
     "def read_smiles_data(path_data):\n",
     "    df = pd.read_csv(path_data, sep=',')\n",
     "    df['fingerprint'] = df['SMILES'].apply(smiles_to_fingerprint)\n",
     "    df['fingerprint'] = df['fingerprint'].apply(lambda x: [int(bit) for bit in x])\n",
+    "    df['fingerprint'] = df['fingerprint'].apply(lambda x: np.array(x))\n",
     "    df['mol'] = df['SMILES'].apply(smiles_to_mol)\n",
     "    return df\n",
+    "\n",
+    "def is_hydrogen_donor(atomic_num, hybridization):\n",
+    "    return int((atomic_num == 8 or atomic_num == 7) and (hybridization == 3 or hybridization == 2))\n",
+    "\n",
+    "def is_polar_bond(atom1_num, atom2_num, electronegativity):\n",
+    "    en1 = electronegativity.get(atom1_num, None)\n",
+    "    en2 = electronegativity.get(atom2_num, None)\n",
+    "    if en1 is None or en2 is None:\n",
+    "        return 0  # Unknown electronegativity, consider as non-polar\n",
+    "    return int(abs(en1 - en2) > 0.4)\n",
+    "\n",
+    "def electroneg():\n",
+    "    return {\n",
+    "    1: 2.20,  # H\n",
+    "    3: 0.98,  # Li\n",
+    "    4: 1.57,  # Be\n",
+    "    5: 2.04,  # B\n",
+    "    6: 2.55,  # C\n",
+    "    7: 3.04,  # N\n",
+    "    8: 3.44,  # O\n",
+    "    9: 3.98,  # F\n",
+    "    11: 0.93, # Na\n",
+    "    12: 1.31, # Mg\n",
+    "    13: 1.61, # Al\n",
+    "    14: 1.90, # Si\n",
+    "    15: 2.19, # P\n",
+    "    16: 2.58, # S\n",
+    "    17: 3.16, # Cl\n",
+    "    19: 0.82, # K\n",
+    "    20: 1.00, # Ca\n",
+    "    22: 1.54, # Ti\n",
+    "    24: 1.66, # Cr\n",
+    "    25: 1.55, # Mn\n",
+    "    26: 1.83, # Fe\n",
+    "    27: 1.88, # Co\n",
+    "    28: 1.91, # Ni\n",
+    "    29: 1.90, # Cu\n",
+    "    30: 1.65, # Zn\n",
+    "    35: 2.96, # Br\n",
+    "    53: 2.66, # I\n",
+    "}\n",
+    "\n",
+    "def weights_init(m):\n",
+    "    if isinstance(m, (GCNConv, GATConv)):\n",
+    "        nn.init.xavier_uniform_(m.weight.data)\n",
+    "    elif isinstance(m, nn.Linear):\n",
+    "        nn.init.xavier_uniform_(m.weight.data)\n",
     "\n",
     "def make_pyg(row):\n",
     "    # Create node features\n",
     "    mol = row['mol']\n",
-    "    atom_features = [atom.GetAtomicNum() for atom in mol.GetAtoms()]\n",
-    "    x1 = tch.tensor(atom_features, dtype=tch.float).view(-1, 1)\n",
-    "    x2 = tch.tensor(row['fingerprint'], dtype=tch.float)\n",
-    "    y = tch.tensor(row['measured.log.solubility.mol.L.'], dtype=tch.float).view(-1, 1)\n",
-    "    # Duplicate fingerprint for each atom and concatenate\n",
-    "    x2_repeated = x2.repeat(x1.shape[0], 1)\n",
-    "    x = tch.cat([x1, x2_repeated], dim=1)\n",
+    "    pauling = electroneg()\n",
+    "    atom_num = [atom.GetAtomicNum() for atom in mol.GetAtoms()]\n",
+    "    atom_hyb = [int(atom.GetHybridization()) for atom in mol.GetAtoms()]\n",
+    "    atom_deg = [atom.GetDegree() for atom in mol.GetAtoms()]\n",
+    "    atom_arom = [int(atom.GetIsAromatic()) for atom in mol.GetAtoms()]  # Aromaticity\n",
+    "    atom_hydrogens = [atom.GetTotalNumHs() for atom in mol.GetAtoms()]  # Number of hydrogens\n",
+    "    atom_h_donor = [is_hydrogen_donor(num, hyb) for num, hyb in zip(atom_num, atom_hyb)]\n",
+    "    atom_charge = [atom.GetFormalCharge() for atom in mol.GetAtoms()]  # Formal charge\n",
+    "    atom_chiral_tag = [int(atom.GetChiralTag()) for atom in mol.GetAtoms()]  # Chirality\n",
+    "    atom_val = [atom.GetExplicitValence() for atom in mol.GetAtoms()]\n",
+    "    atom_mass = [atom.GetMass() for atom in mol.GetAtoms()]\n",
+    "    atom_pauling = [pauling.get(num, 0) for num in atom_num]\n",
     "    \n",
+    "    x1 = tch.tensor(atom_num, dtype=tch.float).view(-1, 1)\n",
+    "    x2 = tch.tensor(atom_hyb, dtype=tch.float).view(-1, 1)\n",
+    "    x3 = tch.tensor(atom_deg, dtype=tch.float).view(-1, 1)\n",
+    "    x4 = tch.tensor(atom_arom, dtype=tch.float).view(-1, 1)\n",
+    "    x5 = tch.tensor(atom_hydrogens, dtype=tch.float).view(-1, 1)\n",
+    "    x6 = tch.tensor(atom_h_donor, dtype=tch.float).view(-1, 1)\n",
+    "    x7 = tch.tensor(atom_charge, dtype=tch.float).view(-1, 1)\n",
+    "    x8 = tch.tensor(atom_chiral_tag, dtype=tch.float).view(-1, 1)\n",
+    "    x9 = tch.tensor(atom_val, dtype=tch.float).view(-1, 1)\n",
+    "    x10 = tch.tensor(atom_mass, dtype=tch.float).view(-1, 1)\n",
+    "    x11 = tch.tensor(atom_pauling, dtype=tch.float).view(-1, 1)\n",
+    "    \n",
+    "    y = tch.tensor(row['measured.log.solubility.mol.L.'], dtype=tch.float).view(-1, 1)\n",
+    "    x = tch.cat([x1\n",
+    "                 , x2\n",
+    "                 , x3\n",
+    "                 , x4\n",
+    "                 , x5\n",
+    "                 , x6\n",
+    "                 , x7\n",
+    "                 , x8\n",
+    "                 , x9\n",
+    "                 , x10\n",
+    "                 , x11]\n",
+    "                 , dim=1)\n",
     "    # Create edge features (connectivity)\n",
     "    edge_indices = []\n",
     "    edge_features = []\n",
@@ -151,12 +229,21 @@
     "        i = bond.GetBeginAtomIdx()\n",
     "        j = bond.GetEndAtomIdx()\n",
     "        edge_indices.append((i, j))\n",
-    "        edge_features.append([bond.GetBondTypeAsDouble()])  # Bond type (as double)\n",
-    "    \n",
+    "        bond_type = bond.GetBondTypeAsDouble()\n",
+    "        is_conjugated = int(bond.GetIsConjugated())  # Conjugation\n",
+    "        is_in_ring = int(bond.IsInRing())  # Ring membership\n",
+    "        bond_stereo = int(bond.GetStereo())  # Stereo configuration\n",
+    "        bond_polarity = is_polar_bond(atom_num[i], atom_num[j], pauling)\n",
+    "        edge_features.append([bond_type\n",
+    "                              , is_conjugated\n",
+    "                              , is_in_ring\n",
+    "                              , bond_stereo\n",
+    "                              , bond_polarity])\n",
     "    edge_index = tch.tensor(edge_indices, dtype=tch.long).t().contiguous()\n",
-    "    edge_attr = tch.tensor(edge_features, dtype=tch.float).view(-1, 1)\n",
-    "    \n",
-    "    return Data(x=x, edge_index=edge_index, edge_attr=edge_attr, y=y)\n"
+    "    edge_attr = tch.tensor(edge_features, dtype=tch.float)\n",
+    "    data = Data(x=x, edge_index=edge_index, edge_attr=edge_attr, y=y)\n",
+    "    data.smiles = row['SMILES']\n",
+    "    return data\n"
    ]
   },
   {
